<resources>
    <string name="app_name">elcy</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <!--    <string name="google_maps_key">AIzaSyArj_CZHCsOvoWVK4Kpj9qxrdY-oR9nbrk</string>-->
    <string name="google_maps_key">AIzaSyCzhO37JuMJEFCAG3nL6f9mqn6QLxcfCaw</string>
    <string name="distance_api_key">AIzaSyDp9NX2wf3Q8sGdET_luEv59ix3NzmOS58</string>
    <string name="arabic">العربية</string>
    <string name="welcome_to_redlogik">Welcome to elcy!</string>
    <string name="sign_in_as_customer">Sign into elcy</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="delivery_new">New</string>
    <string name="delivery_in_process">In-process</string>
    <string name="delivery_completed">Completed</string>
    <string name="delivery_rejected">Rejected</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="map_view">Map View</string>
    <string name="customer">Customer</string>
    <string name="address">Address</string>
    <string name="complete_execution">Complete Execution</string>
    <string name="report_damage">Report Damage</string>
    <string name="send">Send</string>
    <string name="write">Write</string>
    <string name="take_photo">Take Photo</string>
    <string name="reason">Reason</string>
    <string name="timesheet_entry">Timesheet Entry</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="day_time_hint">10-Jan-2020, 12:20 AM</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="add_your_signature">Add your signature</string>
    <string name="draw">Draw</string>
    <string name="upload">Upload</string>
    <string name="download_pdf">Download Pdf</string>
    <string name="enter_search_string">Enter search string</string>
    <string name="search_item_not_found">Search location not found</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="work_order">Work Order</string>
    <string name="on_going_jobs">On Going Jobs</string>
    <string name="scheduled_at">Scheduled at</string>
    <string name="rl_no">RL No</string>
    <string name="ref_no">Ref No</string>
    <string name="jobs">Jobs</string>
    <string name="execution">Execution</string>
    <string name="inprocess">Inprocess</string>
    <string name="licensee">Licensee</string>
    <string name="status">Status :</string>
    <string name="date">Date</string>
    <string name="executions">Executions</string>
    <string name="approve">Approve</string>
    <string name="all">All</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="vehicle_equipment">Vehicle/Equipment</string>
    <string name="download_pod">Download POD</string>
    <string name="clear">Clear</string>
</resources>
