<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".dashboard.driver.decline.DeclineActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/reason"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edWrite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/write"
            android:padding="20dp" />

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/gray_216"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:onClick="onSend"
            android:text="@string/send"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>