<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".language.LanguageActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="38dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/choose_language"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEnglish"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="20dp"
                android:background="@color/grad_1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:onClick="onEnglish"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvArabic"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="69dp"
                android:layout_marginTop="14dp"
                android:background="@color/grad_2"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:onClick="onArabic"
                android:text="@string/arabic"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="23sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>