<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_20"
        android:orientation="vertical"
        tools:context=".dashboard.driver.timesheet.TimeSheetActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:onClick="onBack"
                android:src="@mipmap/close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/timesheet_entry"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="Loading Started" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/from"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:onClick="onFrom"
                    android:id="@+id/liFrom"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/day_time_hint"
                        android:textColor="@color/gray_90"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/date" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/to"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:onClick="onTo"
                    android:id="@+id/liTo"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/day_time_hint"
                        android:textColor="@color/gray_90"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/date" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edNote"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:layout_marginTop="16dp"
                    android:gravity="top"
                    android:hint="@string/note"
                    android:padding="20dp" />


                <TextView
                    android:id="@+id/tvSave"
                    android:layout_width="245dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:background="@color/grad_6"
                    android:elevation="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:onClick="onSave"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</layout>