<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.44">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:src="@mipmap/redlogik" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/welcome_to_redlogik"
                    android:textAllCaps="true"
                    android:textColor="@color/gray_26"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/sign_in_as_customer"
                    android:textColor="@color/gray_72"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight=".82" />

                <EditText
                    android:id="@+id/edUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="62dp"
                    android:fontFamily="@font/lato"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textColor="@color/gray_72" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/lato"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textColor="@color/gray_72" />
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:id="@+id/checkbox"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/lato"
                    android:layout_height="wrap_content"
                    android:text="show password">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1.06" />

                <TextView
                    android:onClick="onLogin"
                    android:id="@+id/tvSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/grad_1"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".3" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".88" />
    </LinearLayout>
</layout>