<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dashboard.driver.job.JobActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/map" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_trans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/grad_6"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRoute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="Route - 20.9 kilometers" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        tools:text="23 Minutes" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:onClick="onMap"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/mapview" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/map_view"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.6" />

            <include
                android:id="@+id/include1"
                layout="@layout/item_jobs" />

            <include
                android:id="@+id/include2"
                layout="@layout/item_jobs" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:id="@+id/tvAccept"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray_216"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:onClick="onAccept"
                    android:text="@string/accept"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvReject"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray_216"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:onClick="onReject"
                    android:text="@string/reject"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>